--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 
 The Rcpi package offers an R/Bioconductor package emphasizing the comprehensive integration of bioinformatics and chemoinformatics into a molecular informatics platform for drug discovery. See `vignette('Rcpi')` for the comprehensive user guide.
 
-## Install
+## Installation
 
 To install the Rcpi package in R, simply type
 
