--- a/vignettes/Rcpi.bib
+++ b/vignettes/Rcpi.bib
@@ -528,8 +528,8 @@
   url = {http://CRAN.R-project.org/package=protr}
 }
 
-@Manual{CRAN:Rcpi,
-  title = {Rcpi: R/Bioconductor Package for Compound-Protein Interactions},
+@Manual{Rcpi,
+  title = {Rcpi: Toolkit for Compound-Protein Interaction in Drug Discovery},
   author = {Nan Xiao and Dongsheng Cao and Qingsong Xu},
   year = {2014},
   note = {R package version 1.0},
