fixes for package checking

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 1.0.0 (2014-02-28)
+Release 1 (2014-03-01)
 ------------------------------------------------------------------------------
 
   NEW FEATURES
