--- a/README
+++ b/README
@@ -11,7 +11,12 @@ To install the Rcpi package in R, simply type
     source('http://bioconductor.org/biocLite.R')
     biocLite('Rcpi')
 
-Several depended packages may have system-level requirements according to your OS type, check the corresponding manuals for installation guides.
+To make the Rcpi package fully functional (especially the Open Babel related functionalities), we recommend the users also install the _Enhances_ packages by using:
+
+    source('http://bioconductor.org/biocLite.R')
+    biocLite('Rcpi', dependencies = c('Imports', 'Enhances'))
+
+Several dependencies of the Rcpi package may require some system-level libraries, check the corresponding manuals of these packages for detailed installation guides.
 
 ## Features
 
